k8s-on-premise-cloud/manifest/movie-web-backend-api-gateway/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: movie-web
  labels:
    app: api-gateway
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: api-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: movie-web-backend-api-gateway
          image: dev.nhatanhdevops.website/onlineshop/movie-web-backend-api-gateway:v10_ae7dfc4d
          ports:
            - containerPort: 8800
              protocol: TCP  
              name: tcp
          resources:
            requests:
              memory: "256Mi"
          volumeMounts:
            - name: api-gateway-configmap
              mountPath: /home/node/app/.env
              subPath: .env
      imagePullSecrets:
        - name: auth-registry
      dnsPolicy: ClusterFirst 
      restartPolicy: Always
      volumes:
        - name: api-gateway-configmap
          configMap:
            defaultMode: 420
            name: api-gateway-configmap
