k8s-on-premise-cloud/manifest/movie-web-backend-api-gateway/api-gateway-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-web-backend-api-gateway-ingress
  namespace: movie-web
spec:
  ingressClassName: nginx  
  rules:
    - host: movie-web-backend.nhatanhmovie.website
      http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: k8s-api-gateway
                port:
                  number: 8800
